--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "@airpie/mdns",
-  "version": "0.0.1",
-  "description": "MDNS Protocol for AirPie",
+  "version": "0.0.14",
+  "description": "MDNS for AirPie",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "type": "module",
+  "exports": "./lib/index.js",
   "author": "Andre Vilela <atvilelas@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build:clean && yarn compile:types && yarn dev && node --inspect lib/index.js",
-    "dev": "webpack --mode development",
+    "start": "yarn dev",
+    "dev": "webpack --config webpack.dev.config.js -w",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "compile:types": "tsc -b ./tsconfig-types.json",
+    "test": "jest --coverage",
+    "compile:types": "tsc -b ./tsconfig.types.json",
     "build:clean": "rm -rf ./lib",
-    "build": "npm-run-all build:clean compile:types && webpack --mode production"
+    "build": "npm-run-all build:clean compile:types && webpack --config webpack.prod.config.js"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
@@ -28,24 +30,22 @@
     "jest": "^29.6.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "source-map-loader": "^4.0.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint"
     }
   },
-  "dependencies": {
-    "@airpie/common-events": "^0.0.2",
-    "@airpie/common-network": "^0.0.1",
-    "@airpie/common-store": "^0.0.2",
-    "dgram": "^1.0.1",
-    "os": "^0.1.2"
+  "directories": {
+    "lib": "lib"
   },
   "repository": {
     "type": "git",
@@ -54,5 +54,11 @@
   "bugs": {
     "url": "https://github.com/atvilelas/airpie-mdns/issues"
   },
-  "homepage": "https://github.com/atvilelas/airpie-mdns#readme"
+  "homepage": "https://github.com/atvilelas/airpie-mdns#readme",
+  "dependencies": {
+    "@airpie/common-events": "^0.0.14",
+    "@airpie/common-misc": "^0.0.13",
+    "@airpie/common-network": "^0.0.14",
+    "@airpie/common-store": "^0.0.14"
+  }
 }
