--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airpie/mdns",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "description": "MDNS for AirPie",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -13,7 +13,9 @@
     "dev": "webpack --config webpack.dev.config.js -w",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
-    "test": "jest --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:coverage": "yarn test -- --coverage",
+    "test:badges": "yarn test:coverage && jest-coverage-badges",
     "compile:types": "tsc -b ./tsconfig.types.json",
     "build:clean": "rm -rf ./lib",
     "build": "npm-run-all build:clean compile:types && webpack --config webpack.prod.config.js"
@@ -26,13 +28,18 @@
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "express.js": "^1.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.4",
+    "jest-coverage-badges": "^1.1.2",
+    "jest-html-reporter": "^3.10.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "puppeteer": "^21.5.2",
     "source-map-loader": "^4.0.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
