--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
     "build": "npm-run-all build:clean compile:types && webpack --config webpack.prod.config.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.10.3",
+    "@types/puppeteer": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "express": "^4.18.2",
     "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-coverage-badges": "^1.1.2",
-    "jest-html-reporter": "^3.10.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
+    "puppeteer": "^21.5.2",
     "source-map-loader": "^4.0.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
