--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.4",
     "jest-coverage-badges": "^1.1.2",
+    "jest-html-reporter": "^3.10.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "puppeteer": "^21.5.2",
