--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^29.6.4",
     "jest-coverage-badges": "^1.1.2",
     "jest-html-reporter": "^3.10.2",
+    "jest-html-reporters": "^3.1.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "puppeteer": "^21.5.2",
