--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "jest": "^29.6.4",
     "jest-coverage-badges": "^1.1.2",
     "jest-html-reporter": "^3.10.2",
-    "jest-html-reporters": "^3.1.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "puppeteer": "^21.5.2",
@@ -46,6 +45,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
